--- a/SyncFListView/SyncFListView.UWP/project.json
+++ b/SyncFListView/SyncFListView.UWP/project.json
@@ -1,6 +1,7 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
+    "Syncfusion.Xamarin.SfListView": "15.3.0.33",
     "Xamarin.Forms": "2.3.4.224"
   },
   "frameworks": {
